--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+
+* {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    margin: 0;
+    font-family: Inter;
+    background-color: #282D35;
+    }
+
+
+nav{
+    display: flex;
+    align-items: center;
+    background-color: #222222;
+    padding: 30px 25px;
+    height: 90px;
+
+}
+
+nav >h2 {
+    color: #61dafb;
+    font-size: 35px;
+}
+
+nav h3 {
+    margin-left: auto;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+}
+
+nav > img{
+    margin-right: 10px;
+}
+
+.main {
+    padding: 30px;
+    color: white;
+    background-image: url("react-image.png");
+    background-repeat: no-repeat;
+    background-position-x: 12%;
+    background-position-y:bottom;
+    background-size: 25%;
+}
+
+.main ul {
+    padding-block: 10px;
+}
+
+.main ul li{
+    margin: 30px;
+    }
+ 
+ ul li::marker{
+    color:#61dafb;
+    font-size: 1.4rem;
 }
